--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ArtemKarlov/weather-forecast",
+  "homepage": "https://ArtemKarlov.github.io/weather-forecast",
   "name": "weather-forecast",
   "version": "0.1.0",
   "private": true,
